--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@
       <p style="font-size: 30px;">Clic en el botón para descargar la App.</p>
 
       <div>
-        <button style="padding: 20px; width: 500px;" type="button" id="btn_iniciar_sesion" class="btn btn-secondary"><a id="a_iniciar_sesion" href="/login"><a id="a_iniciar_sesion" href="https://drive.google.com/file/d/1fSG_GArPjCqdtE41dY856yzZ0OWanioA/view?usp=share_link" download>
+        <button style="padding: 20px; width: 500px;" type="button" id="btn_iniciar_sesion" class="btn btn-secondary"><a id="a_iniciar_sesion" href="/login"><a id="a_iniciar_sesion" href="../apk/sappludable_v1.0.0.apk" download>
           Download v1.0.0</a>
         </button>
       </div>
