--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,16 +10,17 @@
       <h1 style="font-size: 70px;">
         Sappludable
       </h1>
-      <p style="font-size: 30px;">Clic en el botón para descargar la App.</p>
+      <p style="font-size: 30px;">Clic en el botón para descargar la App para Android.</p>
 
       <div>
         <button style="padding: 20px; width: 500px;" type="button" id="btn_iniciar_sesion" class="btn btn-secondary"><a id="a_iniciar_sesion" href="/login"><a id="a_iniciar_sesion" href="../apk/sappludable_v1.0.0.apk" download>
-          Download v1.0.0</a>
+          Download Apk v1.0.0</a>
+        </button>
+        <br><br>
+        <button style="padding: 20px; width: 500px; margin-left: 700px;" type="button" id="btn_registrar" class="btn btn-info"><a target="_blank" id="a_registrar" href="https://drive.google.com/file/d/1fSG_GArPjCqdtE41dY856yzZ0OWanioA/view?usp=share_link">
+          Download Apk from Google Drive </a>
         </button>
       </div>
-      <!--<button type="button" id="btn_registrar" class="btn btn-info"><a id="a_registrar" href="/signup">
-        Download </a>
-      </button>-->
     </section>
     <% include partials/footerIndex %>
 </body>
