--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -12,7 +12,10 @@
       </h1>
       <hr>
       <div style="text-align: justify;">
-        <p>Sappudable es una aplicación móvil ...</p>
+        <p>Sappudable es una aplicación móvil enfocada en orientar e informar a los jovenes 
+          sobre como llevar un estilo de vida más saludable, debido a que son quienes tienen un 
+          mayor riesgo de tener problemas de sobrepeso y obesidad la cual es una gran problematica 
+          en la actualidad.</p>
       </div>
       <div style="padding:10px"></div>
 
