--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,12 +13,12 @@
       <p style="font-size: 30px;">Clic en el botón para descargar la App para Android.</p>
 
       <div>
-        <button style="padding: 20px; width: 500px;" type="button" id="btn_iniciar_sesion" class="btn btn-secondary"><a id="a_iniciar_sesion" href="/login"><a id="a_iniciar_sesion" href="../apk/sappludable_v1.0.0.apk" download>
-          Download Apk v1.0.0</a>
+        <button style="padding: 20px; width: 500px;" type="button" id="btn_iniciar_sesion" class="btn btn-secondary"><a id="a_iniciar_sesion" href="/login"><a id="a_iniciar_sesion" target="_blank" href="https://mega.nz/file/KjQhXCaB#f3hSy4Ae5mhNzkRRCYP5i2qAmRNt3QHvOjOt0q5midU" download>
+          Download Apk v1.0.0 from MEGA</a>
         </button>
         <br><br>
-        <button style="padding: 20px; width: 500px; margin-left: 700px;" type="button" id="btn_registrar" class="btn btn-info"><a target="_blank" id="a_registrar" href="https://drive.google.com/file/d/1CDNOv_ZqjHpcX5fSZejfufkgr3ZE5AsA/view?usp=share_link">
-          Download Apk from Google Drive </a>
+        <button style="padding: 20px; width: 500px; margin-left: 700px;" type="button" id="btn_registrar" class="btn btn-info"><a target="_blank" id="a_registrar" target="_blank" href="https://drive.google.com/file/d/1CDNOv_ZqjHpcX5fSZejfufkgr3ZE5AsA/view?usp=share_link">
+          Download Apk v1.0.0 from Google Drive </a>
         </button>
       </div>
     </section>
